--- a/login.html
+++ b/login.html
@@ -155,113 +155,52 @@
     </div>
   </div>
 
-  <!-- Botão flutuante do WhatsApp -->
-  <a href="https://wa.me/64981226078" class="whatsapp-float" target="_blank" aria-label="Contato via WhatsApp">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Configuração do Firebase
-      const firebaseConfig = {
-        apiKey: "AIzaSyDGBKxvfcY-PA_vC7SA8G0f-TjqjK3OD3o",
-        authDomain: "swifthubcatalao.firebaseapp.com",
-        projectId: "swifthubcatalao",
-        storageBucket: "swifthubcatalao.appspot.com",
-        messagingSenderId: "756803145076",
-        appId: "1:756803145076:web:4593bd78a26a2270a1f021"
-      };
-      // Inicializa o Firebase se ainda não estiver inicializado
-      if (!firebase.apps.length) {
-        firebase.initializeApp(firebaseConfig);
+    const firebaseConfig = {
+      apiKey: "SUA_API_KEY",
+      authDomain: "SEU_DOMINIO.firebaseapp.com",
+      projectId: "SEU_PROJECT_ID",
+      storageBucket: "SEU_STORAGE_BUCKET",
+      messagingSenderId: "SEU_ID",
+      appId: "SEU_APP_ID"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Redirecionamento corrigido para evitar loop infinito
+    auth.onAuthStateChanged(user => {
+      if (user && !window.location.pathname.includes("perfil.html")) {
+        window.location.replace("perfil.html");
       }
-      const auth = firebase.auth();
+    });
 
-      // Redireciona usuário logado para perfil.html se estiver logado
-      auth.onAuthStateChanged(user => {
-        if (user) {
-          window.location.replace("perfil.html");
-        }
-      });
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(userCredential => {
+          if (!userCredential.user.emailVerified) {
+            alert("Verifique seu e-mail antes de fazer login.");
+            auth.signOut();
+          } else {
+            window.location.replace("perfil.html");
+          }
+        })
+        .catch(error => alert("Erro ao entrar: " + error.message));
+    });
 
-      // Função para exibir o modal de erro
-      function showError(message) {
-        document.getElementById("errorMessage").innerHTML = message;
-        document.getElementById("errorModal").style.display = "block";
+    document.getElementById("forgotPassword").addEventListener("click", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      if (!email) {
+        alert("Digite seu e-mail para redefinir a senha.");
+        return;
       }
-
-      // Fechar modal de erro
-      document.getElementById("closeModal").addEventListener("click", () => {
-        document.getElementById("errorModal").style.display = "none";
-      });
-
-      // Alternar entre formulários de Login e Cadastro
-      document.getElementById("showRegister").addEventListener("click", function(e) {
-        e.preventDefault();
-        document.getElementById("loginFormContainer").style.display = "none";
-        document.getElementById("registerFormContainer").style.display = "block";
-      });
-      document.getElementById("showLogin").addEventListener("click", function(e) {
-        e.preventDefault();
-        document.getElementById("registerFormContainer").style.display = "none";
-        document.getElementById("loginFormContainer").style.display = "block";
-      });
-
-      // Recuperação de senha
-      document.getElementById("forgotPassword").addEventListener("click", function(e) {
-        e.preventDefault();
-        const email = document.getElementById("loginEmail").value;
-        if (!email) {
-          alert("Digite seu e-mail para redefinir a senha.");
-          return;
-        }
-        auth.sendPasswordResetEmail(email)
-          .then(() => alert("E-mail de recuperação enviado!"))
-          .catch(error => showError("Erro ao enviar e-mail: " + error.message));
-      });
-
-      // Cadastro de usuário
-      document.getElementById("registerForm").addEventListener("submit", function(e) {
-        e.preventDefault();
-        const email = document.getElementById("registerEmail").value;
-        const password = document.getElementById("registerPassword").value;
-        auth.createUserWithEmailAndPassword(email, password)
-          .then(userCredential => {
-            // Envia e-mail de verificação e alerta o usuário
-            userCredential.user.sendEmailVerification();
-            alert("Cadastro realizado com sucesso! Verifique seu email.");
-            // Alterna para o formulário de login após cadastro
-            document.getElementById("showLogin").click();
-          })
-          .catch(error => showError(error.message));
-      });
-
-      // Login de usuário
-      document.getElementById("loginForm").addEventListener("submit", function(e) {
-        e.preventDefault();
-        const email = document.getElementById("loginEmail").value;
-        const password = document.getElementById("loginPassword").value;
-        auth.signInWithEmailAndPassword(email, password)
-          .then(userCredential => {
-            // Se o email não estiver verificado, exibe opção para reenviar verificação
-            if (!userCredential.user.emailVerified) {
-              document.getElementById("errorMessage").innerHTML = "Por favor, verifique seu email antes de fazer login. <br><button id='resendButton'>Reenviar e-mail de verificação</button>";
-              document.getElementById("errorModal").style.display = "block";
-              auth.signOut();
-              document.getElementById("resendButton").addEventListener("click", function() {
-                userCredential.user.sendEmailVerification()
-                  .then(() => {
-                    alert("E-mail de verificação reenviado!");
-                    document.getElementById("errorModal").style.display = "none";
-                  })
-                  .catch(error => showError(error.message));
-              });
-            } else {
-              window.location.replace("perfil.html");
-            }
-          })
-          .catch(error => showError(error.message));
-      });
+      auth.sendPasswordResetEmail(email)
+        .then(() => alert("E-mail de recuperação enviado!"))
+        .catch(error => alert("Erro ao enviar e-mail: " + error.message));
     });
   </script>
 </body>
