--- a/login.html
+++ b/login.html
@@ -10,47 +10,84 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
-  <!-- Firebase versão 8 compatível -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <!-- Firebase Modular SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "SUA_API_KEY",
+      authDomain: "SEU_DOMINIO.firebaseapp.com",
+      projectId: "SEU_PROJECT_ID",
+      storageBucket: "SEU_STORAGE_BUCKET",
+      messagingSenderId: "SEU_ID",
+      appId: "SEU_APP_ID"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Redirecionamento corrigido para evitar loop infinito
+    onAuthStateChanged(auth, user => {
+      if (user && !window.location.pathname.includes("perfil.html")) {
+        window.location.replace("perfil.html");
+      }
+    });
+
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then(userCredential => {
+          const user = userCredential.user;
+
+          if (!user.emailVerified) {
+            alert("Seu e-mail não foi verificado. Por favor, verifique seu e-mail antes de fazer login.");
+            auth.signOut();
+            return;
+          }
+
+          window.location.replace("perfil.html");
+        })
+        .catch(error => {
+          alert("Erro ao fazer login: " + error.message);
+        });
+    });
+
+    document.getElementById("forgotPassword").addEventListener("click", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      if (!email) {
+        alert("Digite seu e-mail para redefinir a senha.");
+        return;
+      }
+      sendPasswordResetEmail(auth, email)
+        .then(() => alert("E-mail de recuperação enviado!"))
+        .catch(error => alert("Erro ao enviar e-mail: " + error.message));
+    });
+
+    document.getElementById("registerForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+
+      createUserWithEmailAndPassword(auth, email, password)
+        .then(userCredential => {
+          alert("Cadastro realizado com sucesso! Verifique seu email.");
+          userCredential.user.sendEmailVerification();
+          document.getElementById("showLogin").click();
+        })
+        .catch(error => alert("Erro ao cadastrar: " + error.message));
+    });
+  </script>
 
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: Arial, sans-serif; background: #f1f1f1; color: #333; line-height: 1.6; }
     .container { max-width: 400px; margin: auto; padding: 20px; }
 
-    /* Estilos do Modal de Erro */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.5);
-    }
-    .modal-content {
-      background: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border-radius: 5px;
-      width: 80%;
-      max-width: 300px;
-      text-align: center;
-      position: relative;
-    }
-    .close {
-      color: #aaa;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-      position: absolute;
-      top: 5px;
-      right: 10px;
-    }
-
-    /* Estilos dos formulários */
     .form-container {
       background: #fff;
       padding: 20px;
@@ -91,36 +128,10 @@
       margin-top: 10px;
       text-align: center;
     }
-
-    /* Botão flutuante do WhatsApp */
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25D366;
-      color: #fff;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      text-align: center;
-      line-height: 60px;
-      font-size: 30px;
-      z-index: 1000;
-      box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
-    }
   </style>
 </head>
 <body>
 
-  <!-- Modal de erro -->
-  <div id="errorModal" class="modal">
-    <div class="modal-content">
-      <span id="closeModal" class="close">&times;</span>
-      <p id="errorMessage"></p>
-    </div>
-  </div>
-
-  <!-- Área de Login e Cadastro -->
   <div class="container">
     <!-- Formulário de Login -->
     <div class="form-container" id="loginFormContainer">
@@ -137,61 +148,22 @@
         <p>Não tem conta? <a id="showRegister" href="#">Cadastre-se</a></p>
       </div>
     </div>
+
+    <!-- Formulário de Cadastro -->
+    <div class="form-container" id="registerFormContainer" style="display:none;">
+      <h2>Cadastro</h2>
+      <form id="registerForm">
+        <label for="registerEmail">Email:</label>
+        <input type="email" id="registerEmail" required>
+        <label for="registerPassword">Senha:</label>
+        <input type="password" id="registerPassword" required>
+        <button type="submit">Cadastrar</button>
+      </form>
+      <div class="toggle-link">
+        <p>Já tem conta? <a id="showLogin" href="#">Faça login</a></p>
+      </div>
+    </div>
   </div>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "SUA_API_KEY",
-      authDomain: "SEU_DOMINIO.firebaseapp.com",
-      projectId: "SEU_PROJECT_ID",
-      storageBucket: "SEU_STORAGE_BUCKET",
-      messagingSenderId: "SEU_ID",
-      appId: "SEU_APP_ID"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    // Corrigindo loop infinito no redirecionamento
-    auth.onAuthStateChanged(user => {
-      if (user && !window.location.pathname.includes("perfil.html")) {
-        window.location.replace("perfil.html");
-      }
-    });
-
-    document.getElementById("loginForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then(userCredential => {
-          const user = userCredential.user;
-
-          if (!user.emailVerified) {
-            alert("Seu e-mail não foi verificado. Por favor, verifique seu e-mail antes de fazer login.");
-            auth.signOut();
-            return;
-          }
-
-          window.location.replace("perfil.html");
-        })
-        .catch(error => {
-          alert("Erro ao fazer login: " + error.message);
-        });
-    });
-
-    document.getElementById("forgotPassword").addEventListener("click", function(e) {
-      e.preventDefault();
-      const email = document.getElementById("loginEmail").value;
-      if (!email) {
-        alert("Digite seu e-mail para redefinir a senha.");
-        return;
-      }
-      auth.sendPasswordResetEmail(email)
-        .then(() => alert("E-mail de recuperação enviado!"))
-        .catch(error => alert("Erro ao enviar e-mail: " + error.message));
-    });
-  </script>
 </body>
 </html>
