--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
 
   <!-- Firebase Modular SDK -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail, createUserWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "SUA_API_KEY",
@@ -27,7 +27,6 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Redirecionamento corrigido para evitar loop infinito
     onAuthStateChanged(auth, user => {
       if (user && !window.location.pathname.includes("perfil.html")) {
         window.location.replace("perfil.html");
@@ -45,7 +44,7 @@
 
           if (!user.emailVerified) {
             alert("Seu e-mail não foi verificado. Por favor, verifique seu e-mail antes de fazer login.");
-            auth.signOut();
+            signOut(auth);
             return;
           }
 
@@ -82,58 +81,10 @@
         .catch(error => alert("Erro ao cadastrar: " + error.message));
     });
   </script>
-
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: Arial, sans-serif; background: #f1f1f1; color: #333; line-height: 1.6; }
-    .container { max-width: 400px; margin: auto; padding: 20px; }
-
-    .form-container {
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      text-align: left;
-    }
-    form label { margin-bottom: 5px; font-weight: bold; }
-    form input {
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    form button {
-      padding: 10px;
-      background: #B22234;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    form button:hover { background: #a01d2d; }
-    .toggle-link { margin-top: 10px; }
-    .toggle-link a {
-      color: #3C3B6E;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    .forgot-link {
-      margin-top: 10px;
-      text-align: center;
-    }
-  </style>
 </head>
 <body>
 
   <div class="container">
-    <!-- Formulário de Login -->
     <div class="form-container" id="loginFormContainer">
       <h2>Login</h2>
       <form id="loginForm">
@@ -149,7 +100,6 @@
       </div>
     </div>
 
-    <!-- Formulário de Cadastro -->
     <div class="form-container" id="registerFormContainer" style="display:none;">
       <h2>Cadastro</h2>
       <form id="registerForm">
