--- a/perfil.html
+++ b/perfil.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Perfil - Swift Hub Catalão</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meu Perfil - Swift Hub Catalão</title>
   
   <!-- Font Awesome para ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   
   <!-- Firebase Modular SDK -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js";
-    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "SUA_API_KEY",
@@ -28,21 +28,20 @@
     const db = getFirestore(app);
 
     onAuthStateChanged(auth, user => {
-      if (!user && !window.location.pathname.includes("login.html")) {
+      if (!user) {
         window.location.replace("login.html");
+        return;
       }
 
-      if (user) {
-        document.getElementById("profileName").innerText = user.displayName || "Nome do Usuário";
-        document.getElementById("email").value = user.email || "";
+      document.getElementById("profileName").innerText = user.displayName || "Nome do Usuário";
+      document.getElementById("email").value = user.email || "";
 
-        getDoc(doc(db, "users", user.uid)).then(docSnap => {
-          if (docSnap.exists()) {
-            document.getElementById("phone").value = docSnap.data().phone || "";
-            document.getElementById("address").value = docSnap.data().address || "";
-          }
-        });
-      }
+      getDoc(doc(db, "users", user.uid)).then(docSnap => {
+        if (docSnap.exists()) {
+          document.getElementById("phone").value = docSnap.data().phone || "";
+          document.getElementById("address").value = docSnap.data().address || "";
+        }
+      });
     });
 
     document.getElementById("logoutButton").addEventListener("click", function() {
@@ -56,6 +55,7 @@
     document.getElementById("profileForm").addEventListener("submit", function(e) {
       e.preventDefault();
       const user = auth.currentUser;
+
       setDoc(doc(db, "users", user.uid), {
         phone: document.getElementById("phone").value,
         address: document.getElementById("address").value
