--- a/login.html
+++ b/login.html
@@ -67,51 +67,102 @@
         .catch(error => alert("Erro ao enviar e-mail: " + error.message));
     });
 
-    document.getElementById("registerForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const email = document.getElementById("registerEmail").value;
-      const password = document.getElementById("registerPassword").value;
-
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(userCredential => {
-          alert("Cadastro realizado com sucesso! Verifique seu email.");
-          userCredential.user.sendEmailVerification();
-          document.getElementById("showLogin").click();
-        })
-        .catch(error => alert("Erro ao cadastrar: " + error.message));
-    });
   </script>
+
+  <!-- Estilos CSS -->
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+    body {
+      background: linear-gradient(135deg, #3C3B6E, #1C1C5B);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      backdrop-filter: blur(10px);
+    }
+    h2 {
+      margin-bottom: 15px;
+    }
+    .form-container {
+      margin-bottom: 20px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      text-align: left;
+    }
+    form label {
+      margin-bottom: 5px;
+      font-weight: bold;
+      color: #fff;
+    }
+    form input {
+      padding: 10px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      background: rgba(255, 255, 255, 0.2);
+      color: #fff;
+    }
+    form input::placeholder {
+      color: #ddd;
+    }
+    form input:focus {
+      outline: none;
+      background: rgba(255, 255, 255, 0.4);
+    }
+    form button {
+      padding: 12px;
+      background: #B22234;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.1s;
+      font-weight: bold;
+    }
+    form button:hover {
+      background: #8A1E27;
+      transform: scale(1.05);
+    }
+    .forgot-link {
+      margin-top: 10px;
+    }
+    .forgot-link a {
+      color: #FFD700;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    .forgot-link a:hover {
+      color: #FFA500;
+    }
+  </style>
 </head>
 <body>
 
   <div class="container">
+    <!-- Formulário de Login -->
     <div class="form-container" id="loginFormContainer">
       <h2>Login</h2>
       <form id="loginForm">
         <label for="loginEmail">Email:</label>
-        <input type="email" id="loginEmail" required>
+        <input type="email" id="loginEmail" required placeholder="Digite seu email">
         <label for="loginPassword">Senha:</label>
-        <input type="password" id="loginPassword" required>
+        <input type="password" id="loginPassword" required placeholder="Digite sua senha">
         <button type="submit">Entrar</button>
       </form>
       <p class="forgot-link"><a id="forgotPassword" href="#">Esqueci minha senha</a></p>
-      <div class="toggle-link">
-        <p>Não tem conta? <a id="showRegister" href="#">Cadastre-se</a></p>
-      </div>
-    </div>
-
-    <div class="form-container" id="registerFormContainer" style="display:none;">
-      <h2>Cadastro</h2>
-      <form id="registerForm">
-        <label for="registerEmail">Email:</label>
-        <input type="email" id="registerEmail" required>
-        <label for="registerPassword">Senha:</label>
-        <input type="password" id="registerPassword" required>
-        <button type="submit">Cadastrar</button>
-      </form>
-      <div class="toggle-link">
-        <p>Já tem conta? <a id="showLogin" href="#">Faça login</a></p>
-      </div>
     </div>
   </div>
 
